# luckySOL

./: .gitignore  Cargo.toml  README.md
.github/workflows/: node.js.yml
app/: .gitignore  package-lock.json  package.json  tsconfig.json
app/app/api/store-ticket/: route.ts
app/prisma/: schema.prisma
app/prisma/migrations/20241031152641_init/: migration.sql
app/prisma/migrations/20241031152702_lucky_draft_to_json/: migration.sql
backend/: .env.example  Cargo.toml  README.md  package-lock.json  package.json
backend/migrations/: 20241103100236_create_tickets_table.sql
backend/src/: app.module.ts  config.rs  create_ticket_handler.rs  error.rs  main.rs  storage.rs
backend/src/database-test/: database-test.module.ts
backend/src/lucky-draft/: lucky-draft.controller.spec.ts  lucky-draft.controller.ts  lucky-draft.module.ts  lucky-draft.service.spec.ts  lucky-draft.service.ts
backend/src/lucky-draft/entities/: lucky-draft.entity.ts
backend/src/solana-connection/: solana-connection.module.ts  solana-connection.service.spec.ts  solana-connection.service.ts
backend/src/storage/: mod.rs  ticket.rs
backend/src/ticket/: ticket.controller.spec.ts  ticket.controller.ts  ticket.service.spec.ts  ticket.service.ts
backend/src/ticket/dto/: create-ticket.dto.ts  update-ticket.dto.ts
backend/src/ticket/entities/: ticket.entity.ts
client-sdk/: .gitignore  README.md  jest.config.js  package-lock.json  package.json  rollup.config.js  tsconfig.build.json  tsconfig.json
client-sdk/src/: constants.ts  helpers.ts  index.ts  instructions.ts  process.ts
client-sdk/tests/: index.test.ts
frontend/: package-lock.json  package.json
program/: Cargo.toml  README.md
program/src/: entrypoint.rs  error.rs  lib.rs  processor.rs  state.rs
program/src/processor/: mod.rs  process_close_player_account.rs  process_deposit.rs  process_draft.rs  process_player_withdraw.rs  process_pool_initialization.rs  process_purchase_ticket.rs  process_winners.rs  process_withdraw.rs
program/tests/: helpers.rs  integration.rs  lib.rs
receipt-token/: mint-LuckySOL.json  mint-authority.json  mint-authority.txt
scripts/: create-metadata.js  package.json
token-info/: metadata.json
