[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
dotenv = "0.15.0"
rs_merkle = "1.4.2"
solana-sdk = "2.1.0"
thiserror = "1.0.66"
tokio = { version = "1.41.0", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
tower = "0.5.1"
tower-cookies = "0.10.0"
tower-http = "0.6.1"
