[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", default_features = true }
axum-macros = "0.4.2"
dotenv = "0.15.0"
rs_merkle = "1.4.2"
serde = "1.0.214"
serde_json = "1.0.132"
sha2 = "0.10.8"
solana-sdk = "2.1.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "mysql"] }
thiserror = "1.0.66"
tokio = { version = "1.41.0", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
tower = "0.5.1"
tower-cookies = "0.10.0"
tower-http = "0.6.1"
uuid = "1.11.0"
