[package]
name = "solana-lottery"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.1"
borsh-derive = "1.5.1"
solana-program = "2.0.10"
spl-token = "6.0.0"
thiserror = "1.0.64"

[features]
no-entrypoint = []

[lib]
name = "solana_lottery_program"
crate-type = ["cdylib", "lib"]

[dev-dependencies]
solana-program-test = "2.0.13"
solana-sdk = "2.0.13"
