[package]
name = "solana-lottery"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.1"
borsh-derive = "1.5.1"
rs_merkle = { version = "1.4", default-features = false }
solana-program = "2.0.10"
spl-token-2022 = { version = "5.0.2", features = ["no-entrypoint"] }
thiserror = "1.0.64"

[features]
no-entrypoint = []

[lib]
name = "solana_lottery_program"
crate-type = ["cdylib", "lib"]

[dev-dependencies]
solana-logger = "2.0.14"
solana-program-test = "2.0.13"
solana-sdk = "2.0.13"
